Book imageindex.html

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   </header>
   <section class="products">
     <div class="product">
-      <img src="https://via.placeholder.com/150" alt="Book 1">
-      <h3>Romantic Escape</h3>
+      <img src="https://i.postimg.cc/hGSFvnQK/Frontcover.jpg/150" alt="Book 1">
+      <h3>The Billionaire's fake Fiancée</h3>
       <button>Order Now</button>
     </div>
     <div class="product">
