--- a/index.html
+++ b/index.html
@@ -1,30 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>LoveBookstore</title>
-  <style>
-    body { font-family: sans-serif; background: #f9f9f9; margin: 0; padding: 0; }
-    header { background: #FF5722; color: white; padding: 20px; text-align: center; }
-    .products { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; padding: 20px; }
-    .product { background: white; padding: 15px; border-radius: 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
-    .product img { width: 100%; border-radius: 10px; }
-    .product h3 { font-size: 16px; margin: 10px 0; }
-    .product button { background: #FF5722; color: white; border: none; padding: 10px; width: 100%; border-radius: 5px; }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>LoveBookstore</title>
+  <style>
+    body {
+      font-family: sans-serif;
+      background: #f9f9f9;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #FF5722;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+    form {
+      margin-top: 10px;
+    }
+    input[type="text"] {
+      padding: 8px;
+      width: 60%;
+      max-width: 300px;
+      border: none;
+      border-radius: 5px;
+    }
+    button {
+      padding: 8px 12px;
+      margin-left: 5px;
+      border: none;
+      background: white;
+      color: #FF5722;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .products {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 15px;
+      padding: 20px;
+    }
+    .product {
+      background: white;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+    }
+    .product img {
+      width: 100%;
+      border-radius: 10px;
+    }
+    .product h3 {
+      font-size: 16px;
+      margin: 10px 0;
+    }
+    .product button {
+      background: #FF5722;
+      color: white;
+      border: none;
+      padding: 10px;
+      width: 100%;
+      border-radius: 5px;
+    }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>LoveBookstore</h1>
-  </header>
-  <section class="products">
-    <div class="product">
-      <img src="https://i.postimg.cc/hGSFvnQK/Frontcover.jpg/150" alt="Book 1">
-      <h3>The Billionaire's fake Fiancée</h3>
-      <button>Order Now</button>
-    </div>
-    </div>
-  </section>
+  <header>
+    <h1>LoveBookstore</h1>
+    <form id="searchForm">
+      <input type="text" id="searchInput" placeholder="Search books..." />
+      <button type="submit">Search</button>
+    </form>
+  </header>
+
+  <section class="products">
+    <div class="product">
+      <img src="https://i.postimg.cc/hGSFvnQK/Frontcover.jpg" alt="Book 1">
+      <h3>The billionaire's fake Fiancée</h3>
+      <button>Order Now</button>
+    </div>
+    <div class="product">
+      <img src="https://via.placeholder.com/150" alt="Book 2">
+      <h3>Love & Light</h3>
+      <button>Order Now</button>
+    </div>
+  </section>
+
+  <script>
+    document.getElementById('searchForm').addEventListener('submit', function(e) {
+      e.preventDefault();
+      const searchValue = document.getElementById('searchInput').value.toLowerCase();
+      const products = document.querySelectorAll('.product');
+
+      products.forEach(product => {
+        const title = product.querySelector('h3').textContent.toLowerCase();
+        product.style.display = title.includes(searchValue) ? 'block' : 'none';
+      });
+    });
+  </script>
 </body>
 </html>
