--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       border: none;
       border-radius: 5px;
     }
-    button {
+    form button {
       padding: 8px 12px;
       margin-left: 5px;
       border: none;
@@ -37,16 +37,19 @@
       cursor: pointer;
     }
     .products {
-      display: grid;
-      grid-template-columns: 1fr 1fr;
+      display: flex;
+      flex-wrap: wrap;
       gap: 15px;
       padding: 20px;
+      justify-content: center;
     }
     .product {
       background: white;
       padding: 15px;
       border-radius: 10px;
       box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      width: 45%;
+      min-width: 200px;
     }
     .product img {
       width: 100%;
@@ -75,7 +78,7 @@
     </form>
   </header>
 
-  <section class="products">
+  <section class="products" id="productList">
     <div class="product">
       <img src="https://i.postimg.cc/hGSFvnQK/Frontcover.jpg" alt="Book 1">
       <h3>The billionaire's fake Fiancée</h3>
@@ -96,7 +99,11 @@
 
       products.forEach(product => {
         const title = product.querySelector('h3').textContent.toLowerCase();
-        product.style.display = title.includes(searchValue) ? 'block' : 'none';
+        if (title.includes(searchValue)) {
+          product.style.display = 'block';
+        } else {
+          product.style.display = 'none';
+        }
       });
     });
   </script>
